test/negative/finally01.cfr
// Test for negative finally constraint

a
 b ?
  c ?
  d ?
  e ?
  [finally]



